# lfisy

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: file.c.1FFE61C16F88E1FC.idx  file.h.996106B177BAD4E9.idx  lfisy.c.08700C24F20010B8.idx
include/: file.h  lfisy.h
src/: file.c  lfisy.c
test/: main.lua
